--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -454,16 +454,16 @@ $.fn.serializeObject = function(){
 $('.update').click(function(){
   $('#updateModel').modal('show');
   var server_id = $(this).attr('data-id');
-  var idc_str = "";
-  var cabinet_str = "";
-  $.get('http://211.159.165.47:14320/api/v1/idc/idcname',function(data){
-     var idc_data = JSON.parse(data);
-     var idcnames = idc_data.result;
-     for(var i=0;i<idcnames.length;i++){
-          idc_str += '<option value="'+idcnames[i]['id']+'">'+idcnames[i]['name']+'</option>'
-          }
-     $('#idc_name').html(idc_str)
-  })
+  // var idc_str = "";
+  // var cabinet_str = "";
+  // $.get('http://211.159.165.47:14320/api/v1/idc/idcname',function(data){
+  //    var idc_data = JSON.parse(data);
+  //    var idcnames = idc_data.result;
+  //    for(var i=0;i<idcnames.length;i++){
+  //         idc_str += '<option value="'+idcnames[i]['id']+'">'+idcnames[i]['name']+'</option>'
+  //         }
+  //    $('#idc_name').html(idc_str)
+  // })
 
   $.ajax({
     method: "GET",
