--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -6,11 +6,15 @@
 {% block main %}
 <div class="col-sm-12">
 {% if role == "admin" %}
-<p><a href="/serveradd" class='btn btn-sm btn-primary'>添加服务器</a></p>
+<p>
+  <a href="/serveradd" class='btn btn-sm btn-primary'>添加服务器</a>
+  <a href="/server" class='btn btn-sm btn-danger' disabled>删除</a>
+</p>
 {% endif %}
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
     <tr>
+    <th class="text-center"><input type="checkbox"></th>
 		<th class="text-center">编号</th>
 		<th class="text-center">机房名</th>
 		<th class="text-center">机柜ID</th>
@@ -29,6 +33,7 @@
    {% if servers %}
    {% for server in servers %}
         <tr class="gradeX">
+                <td class="text-center"><input type="checkbox"></td>
                 <td class="text-center">{{server.id}}</td>
                 <td class="text-center">{{server.idc_name}}</td>
                 <td class="text-center">{{server.cabinet_id}}</td>
