--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -14,18 +14,18 @@
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
     <tr>
-    <th class="text-center"><input type="checkbox"></th>
-		<th class="text-center">编号</th>
-		<th class="text-center">机房名</th>
-		<th class="text-center">机柜ID</th>
-		<th class="text-center">主机名</th>
-        <th class="text-center">IP地址</th>
-        <th class="text-center">机器型号</th>
-		<th class="text-center">CPU数量</th>
-		<th class="text-center">内存</th>
-		<th class="text-center">磁盘总量</th>
-        <th class="text-center">虚拟主机</th>
-        <th class="text-center">操作</th>
+      <th class="text-center"><input type="checkbox"></th>
+  		<th class="text-center">编号</th>
+  		<th class="text-center">机房名</th>
+  		<th class="text-center">机柜ID</th>
+  		<th class="text-center">主机名</th>
+      <th class="text-center">IP地址</th>
+      <th class="text-center">机器型号</th>
+  		<th class="text-center">CPU数量</th>
+  		<th class="text-center">内存</th>
+  		<th class="text-center">磁盘总量</th>
+      <th class="text-center">虚拟主机</th>
+      <th class="text-center">操作</th>
     </tr>
 </thead>
 <tbody>
@@ -33,26 +33,25 @@
    {% if servers %}
    {% for server in servers %}
         <tr class="gradeX">
-                <td class="text-center"><input type="checkbox"></td>
-                <td class="text-center">{{server.id}}</td>
-                <td class="text-center">{{server.idc_name}}</td>
-                <td class="text-center">{{server.cabinet_id}}</td>
-                <td class="text-center">{{server.hostname}}</td>
-                <td class="text-center">{{server.ip_address}}</td>
-                <td class="text-center">{{server.model}}</td>
+          <td class="text-center"><input type="checkbox"></td>
+          <td class="text-center">{{server.id}}</td>
+          <td class="text-center">{{server.idc_name}}</td>
+          <td class="text-center">{{server.cabinet_id}}</td>
+          <td class="text-center">{{server.hostname}}</td>
+          <td class="text-center">{{server.ip_address}}</td>
+          <td class="text-center">{{server.model}}</td>
 			    <td class="text-center">{{server.cpu_num}}</td>
 			    <td class="text-center">{{server.memory}}</td>
 			    <td class="text-center">{{server.total_disk}}</td>
 			    <td class="text-center">{{server.isVirtual}}</td>
-                <td class="text-center">
-                    <button data-id="{{server.id}}" class="btn btn-xs btn-info update">编辑</button>
-                    <button data-id="{{server.id}}" class="btn btn-xs btn-danger del ">删除</button>
-					<button data-id="{{server.id}}" class="btn btn-xs btn-info detail ">详情</button>
-                </td>
-            </td>
-         </tr>
-    {% endfor %}
-    {% endif %}
+          <td class="text-center">
+              <button data-id="{{server.id}}" class="btn btn-xs btn-info update">编辑</button>
+              <button data-id="{{server.id}}" class="btn btn-xs btn-danger del ">删除</button>
+		          <button data-id="{{server.id}}" class="btn btn-xs btn-info detail ">详情</button>
+          </td>
+        </tr>
+  {% endfor %}
+  {% endif %}
 </tbody>
 </table>
 
@@ -248,7 +247,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-</div> <!--col-sm-12-->
+<!--col-sm-12-->
 <div class="modal fade" id='deleteModel'>
   <div class="modal-dialog">
     <div class="modal-content">
@@ -639,7 +638,8 @@ $('#editable').DataTable({
         "sLast": "末页"
         }
     },
-    "order": [[ 0,"asc" ]]
+    "order": [[ 0,"asc" ]],
+    "padingType": "full_numbers"
 })
 </script>
 {% endblock %}
