page home last test

--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -639,7 +639,7 @@ $('#editable').DataTable({
         }
     },
     "order": [[ 0,"asc" ]],
-    "padingType": "full_numbers"
+    "pagingType": "full_numbers"
 })
 </script>
 {% endblock %}
