--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -640,9 +640,6 @@ $('#editable').DataTable({
     },
     // "order": [[ 0,"asc" ]],
     "pagingType": "full_numbers",
-    "ordering": false,
-    "dom": '<"toolbar">frtip'
+    "ordering": false
 })
-$("div.toolbar").html('<p style="color:red">已选好多项</p>')
-</script>
 {% endblock %}
