--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -9,6 +9,7 @@
 <p>
   <a href="/serveradd" class='btn btn-sm btn-primary'>添加服务器</a>
   <a href="/server" class='btn btn-sm btn-danger' disabled>删除</a>
+  <span id="delete-opts">已选<b>0</b>项，共<b>56</b>项</span>
 </p>
 {% endif %}
 <table class="table table-striped table-bordered table-hover " id="editable">
